--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,6 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }],  "builds": [
+        {
+            "src": "./server.js",
+            "use": "@vercel/node"
+        }
+    ], }
