--- a/vercel.json
+++ b/vercel.json
@@ -4,4 +4,10 @@
             "src": "./server.js",
             "use": "@vercel/node"
         }
-    ] }
+    ],
+ "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/app.js (It may be another name but this file should listen to the server)"
+      }
+    ]}
